Add LoRaCloud application integration.
